force-app/main/default/objects/Product2/fields/AllocatePartsCode__c.field-meta.xml
<CustomField>
    <fullName>AllocatePartsCode__c</fullName>
    <label>Allocate Parts Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>