force-app/main/default/objects/Product2/fields/Apply_Both__c.field-meta.xml
<CustomField>
    <fullName>Apply_Both__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Apply Both</label>
    <type>Checkbox</type>
</CustomField>