force-app/main/default/objects/Product2/fields/Batch_or_Serial_Type__c.field-meta.xml
<CustomField>
    <fullName>Batch_or_Serial_Type__c</fullName>
    <description>- None: undefined
- Batch: Items are allocated in batch
- Serial: Each item has separated serial number and allocated individually</description>
    <label>Batch or Serial Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Batch</fullName>
            </value>
            <value>
                <fullName>Serial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>