force-app/main/default/objects/Product2/fields/Bike_cc__c.field-meta.xml
<CustomField>
    <fullName>Bike_cc__c</fullName>
    <label>Bike CC Range</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Bike_cc</valueSetName>
    </valueSet>
</CustomField>