force-app/main/default/objects/Product2/fields/Bike_Type_2__c.field-meta.xml
<CustomField>
    <fullName>Bike_Type_2__c</fullName>
    <label>Bike Type 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Demo</fullName>
            </value>
            <value>
                <fullName>Used</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>