force-app/main/default/objects/Product2/fields/Bike_Type__c.field-meta.xml
<CustomField>
    <fullName>Bike_Type__c</fullName>
    <label>Bike Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Bike_Type</valueSetName>
    </valueSet>
</CustomField>