force-app/main/default/objects/Product2/fields/Brand_code__c.field-meta.xml
<CustomField>
    <fullName>Brand_code__c</fullName>
    <label>Brand (code)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>