force-app/main/default/objects/Product2/fields/Brand_name__c.field-meta.xml
<CustomField>
    <fullName>Brand_name__c</fullName>
    <description>Add list Aftermarket+Brandname/Genuine Yamaha/Genuine REVZONE default các sản phẩm integrate từ DMS = GENUINE YAMAHA</description>
    <label>Brand (name)</label>
    <length>150</length>
    <type>Text</type>
</CustomField>