force-app/main/default/objects/Product2/fields/Color_Code__c.field-meta.xml
<CustomField>
    <fullName>Color_Code__c</fullName>
    <label>Color Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>