force-app/main/default/objects/Product2/fields/Color_Name__c.field-meta.xml
<CustomField>
    <fullName>Color_Name__c</fullName>
    <label>Color Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>