force-app/main/default/objects/Product2/fields/Color_Type__c.field-meta.xml
<CustomField>
    <fullName>Color_Type__c</fullName>
    <label>Color  Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Color_Type</valueSetName>
    </valueSet>
</CustomField>