force-app/main/default/objects/Product2/fields/CreateDateDMS__c.field-meta.xml
<CustomField>
    <fullName>CreateDateDMS__c</fullName>
    <label>CreateDate DMS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>