force-app/main/default/objects/Product2/fields/Employee_Price__c.field-meta.xml
<CustomField>
    <fullName>Employee_Price__c</fullName>
    <label>Employee Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>