force-app/main/default/objects/Product2/fields/Engince_cc__c.field-meta.xml
<CustomField>
    <fullName>Engince_cc__c</fullName>
    <description>Displacement is DMS name</description>
    <label>Displacement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>