force-app/main/default/objects/Product2/fields/ExternalID_DMS__c.field-meta.xml
<CustomField>
    <fullName>ExternalID_DMS__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>External ID DMS</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>