force-app/main/default/objects/Product2/fields/Internal_Code__c.field-meta.xml
<CustomField>
    <fullName>Internal_Code__c</fullName>
    <label>Internal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>