force-app/main/default/objects/Product2/fields/Internal_code_NVS__c.field-meta.xml
<CustomField>
    <fullName>Internal_code_NVS__c</fullName>
    <label>Internal code NVS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>