force-app/main/default/objects/Product2/fields/Is_Genuine__c.field-meta.xml
<CustomField>
    <fullName>Is_Genuine__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Dùng để check những sản phẩm từ DMS</description>
    <label>Is Genuine</label>
    <type>Checkbox</type>
</CustomField>