force-app/main/default/objects/Product2/fields/Job_Description_Eng__c.field-meta.xml
<CustomField>
    <fullName>Job_Description_Eng__c</fullName>
    <label>Job Name Eng</label>
    <type>TextArea</type>
</CustomField>