force-app/main/default/objects/Product2/fields/KPI_Price__c.field-meta.xml
<CustomField>
    <fullName>KPI_Price__c</fullName>
    <formula>IF( Retail_Price__c != 0 , Retail_Price__c ,  Std_Retail_Price__c - Std_Retail_Price__c *  VAT__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>KPI Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>