force-app/main/default/objects/Product2/fields/Labor_HOUR__c.field-meta.xml
<CustomField>
    <fullName>Labor_HOUR__c</fullName>
    <label>Labor (Hour)</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>