force-app/main/default/objects/Product2/fields/Last_Cost__c.field-meta.xml
<CustomField>
    <fullName>Last_Cost__c</fullName>
    <label>Last Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>