force-app/main/default/objects/Product2/fields/Last_sync_from_DMS__c.field-meta.xml
<CustomField>
    <fullName>Last_sync_from_DMS__c</fullName>
    <description>Với các item sync từ DMS, cần ghi nhận thời điểm sync cuối cùng</description>
    <label>Last sync from DMS</label>
    <type>Date</type>
</CustomField>