force-app/main/default/objects/Product2/fields/LastModify_DMS__c.field-meta.xml
<CustomField>
    <fullName>LastModify_DMS__c</fullName>
    <label>LastModify DMS</label>
    <length>20</length>
    <type>Text</type>
</CustomField>