force-app/main/default/objects/Product2/fields/LastModifyDMS__c.field-meta.xml
<CustomField>
    <fullName>LastModifyDMS__c</fullName>
    <label>LastModify DMS</label>
    <type>Date</type>
</CustomField>