force-app/main/default/objects/Product2/fields/Local_Model_Code__c.field-meta.xml
<CustomField>
    <fullName>Local_Model_Code__c</fullName>
    <label>Local Model Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>