force-app/main/default/objects/Product2/fields/Log_CMS__c.field-meta.xml
<CustomField>
    <fullName>Log_CMS__c</fullName>
    <label>Log CMS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>