force-app/main/default/objects/Product2/fields/LotSeq_no__c.field-meta.xml
<CustomField>
    <fullName>LotSeq_no__c</fullName>
    <label>LotSeq no</label>
    <length>255</length>
    <type>Text</type>
</CustomField>