force-app/main/default/objects/Product2/fields/LotSeq_value__c.field-meta.xml
<CustomField>
    <fullName>LotSeq_value__c</fullName>
    <label>LotSeq value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>