force-app/main/default/objects/Product2/fields/Low_Inventory_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Low_Inventory_Threshold__c</fullName>
    <label>Low Inventory Threshold</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>