force-app/main/default/objects/Product2/fields/Manufacturer_code__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer_code__c</fullName>
    <label>Manufacturer (code)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>