force-app/main/default/objects/Product2/fields/Manufacturer_name__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer_name__c</fullName>
    <label>Manufacturer (name)</label>
    <length>150</length>
    <type>Text</type>
</CustomField>