force-app/main/default/objects/Product2/fields/Maxmimum_Promotion__c.field-meta.xml
<CustomField>
    <fullName>Maxmimum_Promotion__c</fullName>
    <label>Maximum Promotion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>