force-app/main/default/objects/Product2/fields/MiddleGroup_code__c.field-meta.xml
<CustomField>
    <fullName>MiddleGroup_code__c</fullName>
    <label>MiddleGroup (code)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>