force-app/main/default/objects/Product2/fields/MiddleGroup_namee__c.field-meta.xml
<CustomField>
    <fullName>MiddleGroup_namee__c</fullName>
    <label>MiddleGroup (namee)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>