force-app/main/default/objects/Product2/fields/Min_Sales_Qty__c.field-meta.xml
<CustomField>
    <fullName>Min_Sales_Qty__c</fullName>
    <label>Min Sales Qty</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>