force-app/main/default/objects/Product2/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <label>Model</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yamaha</fullName>
            </value>
            <value>
                <fullName>Non yamaha</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>