force-app/main/default/objects/Product2/fields/Model_Bike__c.field-meta.xml
<CustomField>
    <fullName>Model_Bike__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Model Bike</label>
    <referenceTo>Model__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>