force-app/main/default/objects/Product2/fields/Model_Color__c.field-meta.xml
<CustomField>
    <fullName>Model_Color__c</fullName>
    <label>Model-Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>