force-app/main/default/objects/Product2/fields/Model_Id__c.field-meta.xml
<CustomField>
    <fullName>Model_Id__c</fullName>
    <label>Model Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>