force-app/main/default/objects/Product2/fields/Model_Type__c.field-meta.xml
<CustomField>
    <fullName>Model_Type__c</fullName>
    <label>Model Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>