force-app/main/default/objects/Product2/fields/Non_Inventory_Item__c.field-meta.xml
<CustomField>
    <fullName>Non_Inventory_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True: this product is a Non Inventory item (e.g. Installation service, etc.)
False: this product is a Inventory item.</description>
    <label>Non-Inventory Item</label>
    <type>Checkbox</type>
</CustomField>