force-app/main/default/objects/Product2/fields/NonSalesId__c.field-meta.xml
<CustomField>
    <fullName>NonSalesId__c</fullName>
    <label>NonSalesId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>