force-app/main/default/objects/Product2/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <label>Origin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>