force-app/main/default/objects/Product2/fields/Out_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Out_Effective_Date__c</fullName>
    <label>Out Effective Date</label>
    <type>Date</type>
</CustomField>