force-app/main/default/objects/Product2/fields/Part_Size_Long__c.field-meta.xml
<CustomField>
    <fullName>Part_Size_Long__c</fullName>
    <label>Part Size Long</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>