force-app/main/default/objects/Product2/fields/Part_Weight__c.field-meta.xml
<CustomField>
    <fullName>Part_Weight__c</fullName>
    <label>Part Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>