force-app/main/default/objects/Product2/fields/PartID__c.field-meta.xml
<CustomField>
    <fullName>PartID__c</fullName>
    <label>Part ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>