force-app/main/default/objects/Product2/fields/PartNo__c.field-meta.xml
<CustomField>
    <fullName>PartNo__c</fullName>
    <label>PartNo</label>
    <length>100</length>
    <type>Text</type>
</CustomField>