force-app/main/default/objects/Product2/fields/PartsNameEng__c.field-meta.xml
<CustomField>
    <fullName>PartsNameEng__c</fullName>
    <label>Parts  Name Eng</label>
    <length>255</length>
    <type>Text</type>
</CustomField>