force-app/main/default/objects/Product2/fields/PCA_Model__c.field-meta.xml
<CustomField>
    <fullName>PCA_Model__c</fullName>
    <label>PCA Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>