force-app/main/default/objects/Product2/fields/PCA_Supplier__c.field-meta.xml
<CustomField>
    <fullName>PCA_Supplier__c</fullName>
    <label>PCA Supplier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YMVN</fullName>
            </value>
            <value>
                <fullName>Aftermarket</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>