force-app/main/default/objects/Product2/fields/PCA_Type__c.field-meta.xml
<CustomField>
    <fullName>PCA_Type__c</fullName>
    <label>PCA Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Spare part</fullName>
            </value>
            <value>
                <fullName>Accessory</fullName>
            </value>
            <value>
                <fullName>Apparel</fullName>
            </value>
            <value>
                <fullName>Chemical</fullName>
            </value>
            <value>
                <fullName>Clothing</fullName>
                <isActive>false</isActive>
                <label>Clothing</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>