force-app/main/default/objects/Product2/fields/Point_Code__c.field-meta.xml
<CustomField>
    <fullName>Point_Code__c</fullName>
    <label>Point Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>