force-app/main/default/objects/Product2/fields/Product_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Full_Name__c</fullName>
    <formula>IF ( RecordType.Name = &apos;Bike&apos;, Name&amp;&apos; &apos;&amp;  Color_Name__c ,  Name)</formula>
    <label>Product Full Name</label>
    <type>Text</type>
</CustomField>