force-app/main/default/objects/Product2/fields/Product_Unit__c.field-meta.xml
<CustomField>
    <fullName>Product_Unit__c</fullName>
    <label>Product Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chiếc</fullName>
                <default>true</default>
                <label>Chiếc</label>
            </value>
            <value>
                <fullName>Cái</fullName>
            </value>
            <value>
                <fullName>Lọ</fullName>
            </value>
            <value>
                <fullName>Bình</fullName>
            </value>
            <value>
                <fullName>Đơn vị khác</fullName>
            </value>
            <value>
                <fullName>Thùng</fullName>
            </value>
            <value>
                <fullName>Bộ</fullName>
                <isActive>false</isActive>
                <label>Bộ</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>