force-app/main/default/objects/Product2/fields/ProductLineCode__c.field-meta.xml
<CustomField>
    <fullName>ProductLineCode__c</fullName>
    <label>Product Line Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>