force-app/main/default/objects/Product2/fields/Purchase_Lot__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Lot__c</fullName>
    <label>Purchase Lot</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>