force-app/main/default/objects/Product2/fields/Qty__c.field-meta.xml
<CustomField>
    <fullName>Qty__c</fullName>
    <description>This field use for input for flow</description>
    <label>Qty</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>