force-app/main/default/objects/Product2/fields/Quantity_Measure__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Measure__c</fullName>
    <label>Quantity Measure</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>