force-app/main/default/objects/Product2/fields/Quantity_of_Unit__c.field-meta.xml
<CustomField>
    <fullName>Quantity_of_Unit__c</fullName>
    <label>Quantity of Unit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>