force-app/main/default/objects/Product2/fields/RegisterDate__c.field-meta.xml
<CustomField>
    <fullName>RegisterDate__c</fullName>
    <label>Register Date</label>
    <type>Date</type>
</CustomField>