force-app/main/default/objects/Product2/fields/RegisteredModel__c.field-meta.xml
<CustomField>
    <fullName>RegisteredModel__c</fullName>
    <label>RegisteredModel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>