force-app/main/default/objects/Product2/fields/Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>Registration_Date__c</fullName>
    <label>Registration  Date</label>
    <type>Date</type>
</CustomField>