force-app/main/default/objects/Product2/fields/RetailPriceRevisionDate__c.field-meta.xml
<CustomField>
    <fullName>RetailPriceRevisionDate__c</fullName>
    <label>RetailPriceRevisionDate</label>
    <type>Date</type>
</CustomField>