force-app/main/default/objects/Product2/fields/Sales_Lot__c.field-meta.xml
<CustomField>
    <fullName>Sales_Lot__c</fullName>
    <label>Sales Lot</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>