force-app/main/default/objects/Product2/fields/Service_Job_External_Key__c.field-meta.xml
<CustomField>
    <fullName>Service_Job_External_Key__c</fullName>
    <formula>IF(AND (!ISBLANK(ProductLineCode__c), !ISBLANK(ProductCode) ,  RecordType.DeveloperName == &apos;Service_Jobs&apos; ) , 
ProductLineCode__c + &apos;_&apos; + ProductCode, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Job External Key</label>
    <type>Text</type>
</CustomField>