force-app/main/default/objects/Product2/fields/ServiceJob_Name__c.field-meta.xml
<CustomField>
    <fullName>ServiceJob_Name__c</fullName>
    <label>Service Job Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>