force-app/main/default/objects/Product2/fields/Size__c.field-meta.xml
<CustomField>
    <fullName>Size__c</fullName>
    <label>Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>S</fullName>
            </value>
            <value>
                <fullName>M</fullName>
            </value>
            <value>
                <fullName>L</fullName>
            </value>
            <value>
                <fullName>XL</fullName>
            </value>
            <value>
                <fullName>XXL</fullName>
            </value>
            <value>
                <fullName>XXXL</fullName>
            </value>
            <value>
                <fullName>XS</fullName>
            </value>
            <value>
                <fullName>es</fullName>
            </value>
            <value>
                <fullName>ck</fullName>
            </value>
            <value>
                <fullName>ay</fullName>
            </value>
            <value>
                <fullName>39</fullName>
            </value>
            <value>
                <fullName>40</fullName>
            </value>
            <value>
                <fullName>41</fullName>
            </value>
            <value>
                <fullName>42</fullName>
            </value>
            <value>
                <fullName>43</fullName>
            </value>
            <value>
                <fullName>44</fullName>
            </value>
            <value>
                <fullName>45</fullName>
            </value>
            <value>
                <fullName>46</fullName>
            </value>
            <value>
                <fullName>47</fullName>
            </value>
            <value>
                <fullName>2XL</fullName>
                <isActive>false</isActive>
                <label>2XL</label>
            </value>
            <value>
                <fullName>37</fullName>
                <isActive>false</isActive>
                <label>37</label>
            </value>
            <value>
                <fullName>38</fullName>
                <isActive>false</isActive>
                <label>38</label>
            </value>
            <value>
                <fullName>3XL</fullName>
                <isActive>false</isActive>
                <label>3XL</label>
            </value>
            <value>
                <fullName>48</fullName>
                <isActive>false</isActive>
                <label>48</label>
            </value>
            <value>
                <fullName>49</fullName>
                <isActive>false</isActive>
                <label>49</label>
            </value>
            <value>
                <fullName>50</fullName>
                <isActive>false</isActive>
                <label>50</label>
            </value>
            <value>
                <fullName>51</fullName>
                <isActive>false</isActive>
                <label>51</label>
            </value>
            <value>
                <fullName>52</fullName>
                <isActive>false</isActive>
                <label>52</label>
            </value>
            <value>
                <fullName>53</fullName>
                <isActive>false</isActive>
                <label>53</label>
            </value>
            <value>
                <fullName>54</fullName>
                <isActive>false</isActive>
                <label>54</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>