force-app/main/default/objects/Product2/fields/STD_Purchase_Qty__c.field-meta.xml
<CustomField>
    <fullName>STD_Purchase_Qty__c</fullName>
    <label>STD Purchase Qty</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>