force-app/main/default/objects/Product2/fields/Std_Retail_Price__c.field-meta.xml
<CustomField>
    <fullName>Std_Retail_Price__c</fullName>
    <label>Std Retail Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>