force-app/main/default/objects/Product2/fields/Sub_Service_Category__c.field-meta.xml
<CustomField>
    <fullName>Sub_Service_Category__c</fullName>
    <label>Sub-Service-Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Service_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Less than 400cc</fullName>
            </value>
            <value>
                <fullName>Greater than 400 cc</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>