force-app/main/default/objects/Product2/fields/Superseding_Parts_Code__c.field-meta.xml
<CustomField>
    <fullName>Superseding_Parts_Code__c</fullName>
    <label>Superseding Parts Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>