force-app/main/default/objects/Product2/fields/Superseding_Parts_Namee__c.field-meta.xml
<CustomField>
    <fullName>Superseding_Parts_Namee__c</fullName>
    <label>Superseding Parts Namee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>