force-app/main/default/objects/Product2/fields/SupersedingPart__c.field-meta.xml
<CustomField>
    <fullName>SupersedingPart__c</fullName>
    <label>Superseding Part</label>
    <type>TextArea</type>
</CustomField>