force-app/main/default/objects/Product2/fields/SupersedingRevisionDate__c.field-meta.xml
<CustomField>
    <fullName>SupersedingRevisionDate__c</fullName>
    <label>Superseding Revision Date</label>
    <type>Date</type>
</CustomField>