force-app/main/default/objects/Product2/fields/Unavaliable__c.field-meta.xml
<CustomField>
    <fullName>Unavaliable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unavaliable</label>
    <type>Checkbox</type>
</CustomField>