force-app/main/default/objects/Product2/fields/Unit_Measure__c.field-meta.xml
<CustomField>
    <fullName>Unit_Measure__c</fullName>
    <label>Unit Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Days</fullName>
            </value>
            <value>
                <fullName>Months</fullName>
            </value>
            <value>
                <fullName>Hours</fullName>
                <default>true</default>
                <label>Hours</label>
            </value>
            <value>
                <fullName>Weeks</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>