force-app/main/default/objects/Product2/fields/UoM__c.field-meta.xml
<CustomField>
    <fullName>UoM__c</fullName>
    <description>Unit of measure 
(Piece, Box, Hour, etc.)</description>
    <label>UoM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>