force-app/main/default/objects/Product2/fields/Warranty_Duration__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Duration__c</fullName>
    <inlineHelpText>How many months is your bike&apos;s warranty?</inlineHelpText>
    <label>Warranty Duration (Months)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>