force-app/main/default/objects/Product2/fields/Warranty_Kilometers__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Kilometers__c</fullName>
    <inlineHelpText>How many kilometers does your bikes&apos; warranty have?</inlineHelpText>
    <label>Warranty Kilometers</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>