force-app/main/default/objects/Product2/fields/WholesalePriceRevisionDate__c.field-meta.xml
<CustomField>
    <fullName>WholesalePriceRevisionDate__c</fullName>
    <label>WholesalePriceRevisionDate</label>
    <type>Date</type>
</CustomField>