force-app/main/default/objects/Product2/fields/WholesaleStandardPrice__c.field-meta.xml
<CustomField>
    <fullName>WholesaleStandardPrice__c</fullName>
    <label>WholesaleStandardPrice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>